test/log/iir/vsrdotiircu_v_i32_d2s4.txt
vsrdotiircu_v_i32_d2s4.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsrdotiircu_v_i32_d2s4.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsrdotiircu_v_i32_d2s4.c:37:6: warning: no previous prototype for 'vsrdotiircu_v_i32_d2s4_golden' [-Wmissing-prototypes]
   37 | void vsrdotiircu_v_i32_d2s4_golden(int32_t *base,int32_t a[4][16],int32_t exp_result[][ELE_NUM]) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
vsrdotiircu_v_i32_d2s4.c: In function 'vsrdotiircu_v_i32_d2s4_golden':
vsrdotiircu_v_i32_d2s4.c:38:1: error: unknown type name 'Operator'
   38 | Operator Line --- TODO
      | ^~~~~~~~
vsrdotiircu_v_i32_d2s4.c:38:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   38 | Operator Line --- TODO
      |               ^~
vsrdotiircu_v_i32_d2s4.c:42:5: warning: 'main' is normally a non-static function [-Wmain]
   42 | int main(void) {
      |     ^~~~
vsrdotiircu_v_i32_d2s4.c: In function 'main':
vsrdotiircu_v_i32_d2s4.c:44:13: warning: declaration of 'base' shadows a parameter [-Wshadow]
   44 |     int32_t base[ELE_NUM*COMBO_NUM];
      |             ^~~~
vsrdotiircu_v_i32_d2s4.c:37:45: note: shadowed declaration is here
   37 | void vsrdotiircu_v_i32_d2s4_golden(int32_t *base,int32_t a[4][16],int32_t exp_result[][ELE_NUM]) {
      |                                    ~~~~~~~~~^~~~
vsrdotiircu_v_i32_d2s4.c:45:18: warning: declaration of 'a' shadows a parameter [-Wshadow]
   45 |     int32x16x4_t a;
      |                  ^
vsrdotiircu_v_i32_d2s4.c:37:58: note: shadowed declaration is here
   37 | void vsrdotiircu_v_i32_d2s4_golden(int32_t *base,int32_t a[4][16],int32_t exp_result[][ELE_NUM]) {
      |                                                  ~~~~~~~~^~~~~~~~
vsrdotiircu_v_i32_d2s4.c:50:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   50 |     int32_t exp_result[2][16] = {0};
      |             ^~~~~~~~~~
vsrdotiircu_v_i32_d2s4.c:37:75: note: shadowed declaration is here
   37 | void vsrdotiircu_v_i32_d2s4_golden(int32_t *base,int32_t a[4][16],int32_t exp_result[][ELE_NUM]) {
      |                                                                   ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
vsrdotiircu_v_i32_d2s4.c:65:14: warning: implicit declaration of function 'vsrdotiircu_v_i32_d2s4'; did you mean 'vsrdotiircu_v_u32_d2s4'? [-Wimplicit-function-declaration]
   65 |     result = vsrdotiircu_v_i32_d2s4(base,a);
      |              ^~~~~~~~~~~~~~~~~~~~~~
      |              vsrdotiircu_v_u32_d2s4
vsrdotiircu_v_i32_d2s4.c:65:14: error: incompatible types when assigning to type 'int32x16x2_t' from type 'int'
vsrdotiircu_v_i32_d2s4.c:71:80: warning: format '%d' expects argument of type 'int', but argument 7 has type 'int32_t' {aka 'long int'} [-Wformat=]
   71 |                 printf("Failed: result.val[%d][%d] = %d, exp_result[%d][%d] = %d\n", i,j, result.val[i][j], i,j, exp_result[i][j]);
      |                                                                               ~^                                 ~~~~~~~~~~~~~~~~
      |                                                                                |                                              |
      |                                                                                int                                            int32_t {aka long int}
      |                                                                               %ld
vsrdotiircu_v_i32_d2s4.c: In function 'vsrdotiircu_v_i32_d2s4_golden':
vsrdotiircu_v_i32_d2s4.c:87:1: error: expected declaration or statement at end of input
   87 | }
      | ^
vsrdotiircu_v_i32_d2s4.c:37:45: warning: unused parameter 'base' [-Wunused-parameter]
   37 | void vsrdotiircu_v_i32_d2s4_golden(int32_t *base,int32_t a[4][16],int32_t exp_result[][ELE_NUM]) {
      |                                    ~~~~~~~~~^~~~
vsrdotiircu_v_i32_d2s4.c:37:58: warning: unused parameter 'a' [-Wunused-parameter]
   37 | void vsrdotiircu_v_i32_d2s4_golden(int32_t *base,int32_t a[4][16],int32_t exp_result[][ELE_NUM]) {
      |                                                  ~~~~~~~~^~~~~~~~
vsrdotiircu_v_i32_d2s4.c:37:75: warning: unused parameter 'exp_result' [-Wunused-parameter]
   37 | void vsrdotiircu_v_i32_d2s4_golden(int32_t *base,int32_t a[4][16],int32_t exp_result[][ELE_NUM]) {
      |                                                                   ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
At top level:
vsrdotiircu_v_i32_d2s4.c:42:5: warning: 'main' defined but not used [-Wunused-function]
   42 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsrdotiircu_v_i32_d2s4.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsrdotiircu_v_i32_d2s4"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsrdotiircu_v_i32_d2s4.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsrdotiircu_v_i32_d2s4.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed